<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <name>rest-retro-parent</name>
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.shaigor</groupId>
  <artifactId>rest-retro-parent</artifactId>
  <packaging>pom</packaging>
  <version>1.0.0-SNAPSHOT</version>
  <description>Retrofitting REST Web Services with security sample.</description>
  <prerequisites>
    <maven>3.0.1</maven>
  </prerequisites>
  <properties>
  	<aspectj.version>1.8.2</aspectj.version>
  	<cglib.version>3.1</cglib.version>
  	<commons-io.version>2.4</commons-io.version>
    <context.path>/rest/retro/demo</context.path>
    <dbcp2.version>2.0.1</dbcp2.version>
    <fest-assert.version>1.4</fest-assert.version>
    <findbugs-maven-plugin.version>3.0.0</findbugs-maven-plugin.version>
    <hamcrest.version>1.3</hamcrest.version>
    <httpclient.version>4.3.5</httpclient.version>
    <javax.annotation.version>1.2</javax.annotation.version>
    <jstl-jstl.version>1.2.1</jstl-jstl.version>
    <junit.version>4.11</junit.version>
    <log4j.version>1.2.17</log4j.version>
    <mysql.version>5.1.32</mysql.version>
    <rome.version>1.5.0</rome.version>
    <servlet-api.version>3.1.0</servlet-api.version>
    <slf4j.version>1.7.7</slf4j.version>
    <spring.release>4.1.0.RELEASE</spring.release>
    <spring.security.release>3.2.5.RELEASE</spring.security.release>
    <spring.security.oauth2.release>2.0.3.RELEASE</spring.security.oauth2.release>
    <spring.integration.version>4.0.4.RELEASE</spring.integration.version>
    <stop.port>9996</stop.port>
    <surefire-plugin.version>2.4.3</surefire-plugin.version>
    <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
    <web.port>9986</web.port>
    <jackson2.version>2.4.0</jackson2.version>
  </properties>
  <build>
    <plugins>
		<plugin>
		  <groupId>org.codehaus.mojo</groupId>
		  <artifactId>build-helper-maven-plugin</artifactId>
		  <version>1.9.1</version>
		  <executions>
			<execution>
			  <phase>initialize</phase>
			  <id>parse-version</id>
			  <goals>
				<goal>parse-version</goal>
			  </goals>
			</execution>
		  </executions>
		</plugin>
      <plugin>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-maven-plugin</artifactId>
        <version>9.2.2.v20140723</version>
        <configuration>
          <httpConnector>
            <port>${web.port}</port>
          </httpConnector>
          <webapp>
            <contextPath>${context.path}</contextPath>
          </webapp>
          <scanIntervalSeconds>10</scanIntervalSeconds>
          <stopPort>${stop.port}</stopPort>
          <stopKey>foo</stopKey>
          <systemProperties>
            <systemProperty>
              <name>spring.profiles.active</name>
              <value>demo</value>
            </systemProperty>
          </systemProperties>
          <argline>-Xms1g -Xmx2g -XX:MaxPermSize=1024m</argline>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>2.2</version>
        <configuration>
          <path>${context.path}</path>
          <url>http://localhost:${web.port}/manager</url>
          <systemProperties>
            <systemProperty>
              <name>spring.profiles.active</name>
              <value>demo</value>
            </systemProperty>
          </systemProperties>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.8</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.4.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Svn-Revision>${SVN_REVISION}</Svn-Revision>
              <Build-Tag>${BUILD_TAG}</Build-Tag>
              <Build-Number>${BUILD_NUMBER}</Build-Number>
              <Build-Id>${BUILD_ID}</Build-Id>
            </manifestEntries>
          </archive>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>1.3.1</version>
        <executions>
          <execution>
            <id>enforce-versions</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.0.1</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>[1.7.*,)</version>
                </requireJavaVersion>
                <DependencyConvergence/>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>${findbugs-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>${versions-maven-plugin.version}</version>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.8</version>
        <reportSets>
          <reportSet>
            <id>aggregate</id>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>${findbugs-maven-plugin.version}</version>
        <configuration>
          <findbugsXmlOutput>true</findbugsXmlOutput>
          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
          <xmlOutput>true</xmlOutput>
          <omitVisitors>FindReturnRef</omitVisitors>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <formats>
            <format>xml</format>
            <format>html</format>
          </formats>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>${versions-maven-plugin.version}</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>dependency-updates-report</report>
              <report>plugin-updates-report</report>
              <report>property-updates-report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>
  <dependencies>
    <!-- Servlet -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.hamcrest</groupId>
          <artifactId>hamcrest-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>${hamcrest.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>${slf4j.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>${log4j.version}</version>
      <scope>runtime</scope>
    </dependency>
  </dependencies>
  <modules>
    <module>service</module>
    <module>insecure-service</module>
    <module>insecure-client</module>
    <module>secure-shared</module>
    <module>secure-service</module>
    <module>secure-client</module>
    <module>secure-gateway</module>
    <module>secure-gateway-client</module>
    <module>secure-idp-client</module>
  </modules>
</project>
